  * (read-line file-port) -> str or *eof*
  * (read-line string-port) -> str or *eof*
  * Moved lib/http.ms to lib/http-url.ms
  * Added lib/http-server.ms
  * (read-http-request port) -> http-request
  * (write-http-response port code reason headers body)
  * (spawn-http-server portno func)
  * Added test/http.ms
  * Revised lib/filter to work with counted read lengths.

- 4/2/2006, HTTP-URL
  * (register-url-parser scheme parser)
  * Modified string->url to use registered URL "parsers" for various schemes.
  * Added lib/http.ms
  * Added the <http-url> type
  * Added the HTTP URL parser scheme.
  * (make-http-url host port path args frag) -> http-url
  * (http-url-args url) -> value
  * (http-url-arg url key) -> value
  * (http-url-addr url) -> value
  * (http-url-port url) -> value
  * (url-scheme http-url) -> string
  * (url-path http-url) -> string
  * (url-auth http-url) -> string
  * (url-query http-url) -> string
  * (url-frag http-url) -> string
  * (string->url string scheme) -> url
  * Fixed bug with macros not working from imported modules

- 4/2/2006, URL Module
  * Added lib/url.ms
  * Added the <url> type
  * (url-scheme url) -> string
  * (url-path url) -> string
  * (url-auth url) -> string
  * (url-query url) -> string
  * (url-frag url) -> string
  * (string->url str) -> url
  * (url->string url) -> str
  * (percent-encode string mask) -> string
  * (percent-decode string) -> string
  * Added test/url.ms

- 4/2/2006, REGEX Primitives
  * Added mosvm/regex.c, mosvm/mosvm/regex.h and mosvm/prims/regex.c
  * (make-regex pattern) -> regex
  * (regex-match regex string) -> list of groups or match or #f
  * (regex-match* regex string) -> list of matches 
  * (regex? value) -> #t or #f
  * Added test/regex.ms

- 3/24/2006, MOSREF Remote REPL
  * Added string->integer to core prims
  * Added a platform architecture tag to the stubs
  * Disabled set-macro! generation by the compiler; imported macros can
    be determined by module source examination, now.